--- a/css/main.css
+++ b/css/main.css
@@ -273,7 +273,8 @@ a:hover, a:focus {
 }
 
 .logo img {
-  margin-top: 6px;
+    height: auto;
+    width: 50%;
 }
 
 
@@ -282,7 +283,7 @@ a:hover, a:focus {
    Main styles
    ========================================================================== */
 header {
-  background: url(../img/header-bg.jpg) no-repeat center center;
+  background: url(../img/bg.jpeg) no-repeat center center;
   width: 100%;
   padding: 20px 10px 60px 10px;
   height: 100vh;
