Remove again text trial version slider

--- a/css/main.css
+++ b/css/main.css
@@ -611,6 +611,9 @@ footer {
     justify-content: center;
     align-items: center;
 }
+.video-info + #text {
+  color:white;
+}
 
 #pricing #icons h3 {
     text-align: center;
